kubernetes/gateway/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voce-aluga-frontend
  namespace: voce-aluga
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: voce-aluga-frontend-vm
  namespace: voce-aluga
  labels:
    kubernetes.io/service-name: voce-aluga-frontend
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 80
endpoints:
  - addresses:
      - 52.159.104.78
    conditions:
      ready: true
